k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-backend
  namespace: student-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: student-app-backend

  template:
    metadata:
      labels:
        app: student-app-backend

    spec:
      containers:
        - name: backend
          image: 620448465315.dkr.ecr.ap-south-1.amazonaws.com/student-app-backend:latest
          ports:
            - containerPort: 8080
