k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-app-frontend
  namespace: student-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-app-frontend
  template:
    metadata:
      labels:
        app: student-app-frontend
    spec:
      containers:
        - name: frontend
          image: 620448465315.dkr.ecr.ap-south-1.amazonaws.com/student-app-frontend:v2
          ports:
            - containerPort: 80
