k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-backend-service
  namespace: student-app
spec:
  selector:
    app: student-app-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
