k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-app-frontend-service
  namespace: student-app
spec:
  type: ClusterIP
  selector:
    app: student-app-frontend
  ports:
    - port: 80
      targetPort: 80
